Closed memory leaks. Changed use of deprecated constructors. Removed most unused imports.